--- a/static/languages/bg.json
+++ b/static/languages/bg.json
@@ -1,13 +1,11 @@
 {
-  "title": "Кои страни от ЕС предлагат най-добри перспективи за заетост?",
-  "subtitle": "Бъдещият растеж на заетостта в тези страни през 2022-2035 г. се оценява на 5,6%.",
+  "title": "Колко жени са били убити от близък човек в Европа?",
+  "subtitle": "През 2023 г. средният брой убити жени в ЕС е бил 0,47 на 100 000 души. Тези убийства обикновено са извършени от техния партньор или член на семейството.",
   "textNoteDescription": "Забележка",
-  "textNote": "sdchdc",
+  "textNote": "Данните за Кипър, Италия и Швеция са от 2019 г., а за Финландия и Малта са от 2022 г. Няма налични данни за Белгия, България, Люксембург, Дания, Полша или Португалия. Данните са събрани от националните статистически институти или други съответни органи. Силните вариации между държавите членки може да се дължат на липсата на стандартизирани дефиниции и непоследователни методи за събиране на данни.",
   "textSourceDescription": "Източник",
-  "textSource": "sdcshdc",
+  "textSource": "Евростат (2023 г.)",
   "linkDataAccessDescription": "Достъп до данните",
-  "extraInfo_DE": "Германия ускорява внедряването на възобновяема енергия, цели 80% чиста енергия до 2030 г.",
-  "extraInfo_FR": "Френският парламент одобри законопроект за основна реформа на имиграцията на фона на протести в цялата страна",
   "legend1": "Няма налични данни",
   "tooltipExtraInfoLabel": "Кликнете тук"
 }
