--- a/static/languages/da.json
+++ b/static/languages/da.json
@@ -1,13 +1,11 @@
 {
-  "title": "Hvilke EU-lande har de bedste beskæftigelsesmuligheder?",
-  "subtitle": "Fremtidig vækst i beskæftigelsen i disse lande i 2022-2035 anslås til 5,6 %.",
+  "title": "Hvor mange kvinder blev dræbt af en person, der stod dem nær, i Europa?",
+  "subtitle": "I 2023 var det gennemsnitlige antal myrdede kvinder i EU 0,47 pr. 100.000 mennesker. Disse mord blev normalt begået af deres partner eller et familiemedlem.",
   "textNoteDescription": "Note",
-  "textNote": "sdchdc",
+  "textNote": "Dataene for Cypern, Italien og Sverige er fra 2019, og for Finland og Malta er de fra 2022. Der er ingen data tilgængelige for Belgien, Bulgarien, Luxembourg, Danmark, Polen eller Portugal. Dataene er indsamlet fra nationale statistikinstitutter eller andre relevante myndigheder. Større variationer på tværs af medlemsstaterne kan skyldes manglende standardiserede definitioner og inkonsistente dataindsamlingsmetoder.",
   "textSourceDescription": "Kilde",
-  "textSource": "sdcshdc",
-  "linkDataAccessDescription": "Få adgang til data",
-  "extraInfo_DE": "Tyskland fremskynder udrulningen af vedvarende energi, sigter mod 80 % ren strøm inden 2030",
-  "extraInfo_FR": "Det franske parlament godkender lovforslaget om større immigrationsreformer under landsdækkende protester",
-  "legend1": "Ingen tilgængelige data",
+  "textSource": "Eurostat (2023)",
+  "linkDataAccessDescription": "Få adgang til dataene",
+  "legend1": "Ingen data tilgængelige",
   "tooltipExtraInfoLabel": "Klik her"
 }
