--- a/static/languages/hr.json
+++ b/static/languages/hr.json
@@ -1,13 +1,11 @@
 {
-  "title": "Koje zemlje EU-a nude najbolje izglede za zapošljavanje?",
-  "subtitle": "Budući rast zaposlenosti u tim zemljama u razdoblju 2022. – 2035. procjenjuje se na 5,6%.",
+  "title": "Koliko je žena u Europi ubila osoba bliska njima?",
+  "subtitle": "U 2023. godini prosječan broj ubijenih žena u EU bio je 0,47 na 100 000 ljudi. Ta su ubojstva obično počinili njihovi partneri ili članovi obitelji.",
   "textNoteDescription": "Bilješka",
-  "textNote": "sdchdc",
+  "textNote": "Podaci za Cipar, Italiju i Švedsku su iz 2019., a za Finsku i Maltu su iz 2022. Nema dostupnih podataka za Belgiju, Bugarsku, Luksemburg, Dansku, Poljsku ili Portugal. Podaci se prikupljaju od nacionalnih statističkih zavoda ili drugih relevantnih tijela. Velike varijacije među državama članicama mogu biti posljedica nedostatka standardiziranih definicija i nedosljednih metoda prikupljanja podataka.",
   "textSourceDescription": "Izvor",
-  "textSource": "sdcshdc",
-  "linkDataAccessDescription": "Pristupite podacima",
-  "extraInfo_DE": "Njemačka ubrzava uvođenje obnovljive energije, cilj je 80% čiste energije do 2030.",
-  "extraInfo_FR": "Francuski parlament odobrio veliki nacrt zakona o useljeničkoj reformi usred prosvjeda diljem zemlje",
+  "textSource": "Eurostat (2023.)",
+  "linkDataAccessDescription": "Pristup podacima",
   "legend1": "Nema dostupnih podataka",
   "tooltipExtraInfoLabel": "Kliknite ovdje"
 }
