--- a/static/languages/en.json
+++ b/static/languages/en.json
@@ -1,13 +1,11 @@
 {
-  "title": "Which EU countries offer the best employment prospects?",
-  "subtitle": "Future employment growth in these countries in 2022-2035 is estimated at 5.6%.",
+  "title": "How many women were killed by someone close to them in Europe?",
+  "subtitle": "In 2023, the average number of women who were murdered in the EU was 0.47 per 100,000 people. These murders were usually committed by their partner or a family member.",
   "textNoteDescription": "Note",
-  "textNote": "sdchdc",
+  "textNote": "The data for Cyprus, Italy and Sweden is from 2019, and for Finland and Malta it is from 2022. There is no data available for Belgium, Bulgaria, Luxembourg, Denmark, Poland or Portugal. The data are collected from National Statistical Institutes or other relevant authorities. Strong variations across member states may be due to a lack of standardised definitions and inconsistent data collection methods.",
   "textSourceDescription": "Source",
-  "textSource": "sdcshdc",
+  "textSource": "Eurostat (2023)",
   "linkDataAccessDescription": "Access the data",
-  "extraInfo_DE": "Germany Accelerates Renewable Energy Rollout, Targets 80% Clean Power by 2030",
-  "extraInfo_FR": "French Parliament Approves Major Immigration Reform Bill Amid Nationwide Protests",
   "legend1": "No data available",
   "tooltipExtraInfoLabel": "Click here"
 }
