--- a/static/languages/fi.json
+++ b/static/languages/fi.json
@@ -1,13 +1,11 @@
 {
-  "title": "Mitkä EU-maat tarjoavat parhaat työllisyysnäkymät?",
-  "subtitle": "Näissä maissa tulevaisuudessa työllisyyden kasvun arvioidaan olevan 5,6 % vuosina 2022-2035.",
-  "textNoteDescription": "Huom",
-  "textNote": "sdchdc",
+  "title": "Kuinka monta naista Euroopassa on tapettu läheisensä toimesta?",
+  "subtitle": "Vuonna 2023 EU:ssa murhattujen naisten keskimääräinen määrä oli 0,47 100 000 ihmistä kohden. Nämä murhat teki yleensä heidän kumppaninsa tai perheenjäsenensä.",
+  "textNoteDescription": "Huomautus",
+  "textNote": "Kyproksen, Italian ja Ruotsin tiedot ovat vuodelta 2019 ja Suomen ja Maltan tiedot vuodelta 2022. Belgiasta, Bulgariasta, Luxemburgista, Tanskasta, Puolasta tai Portugalista ei ole saatavilla tietoja. Tiedot on kerätty kansallisilta tilastolaitoksilta tai muilta asiaankuuluvilta viranomaisilta. Suuret vaihtelut jäsenvaltioiden välillä voivat johtua standardoitujen määritelmien puutteesta ja epäjohdonmukaisista tiedonkeruumenetelmistä.",
   "textSourceDescription": "Lähde",
-  "textSource": "sdcshdc",
+  "textSource": "Eurostat (2023)",
   "linkDataAccessDescription": "Käytä tietoja",
-  "extraInfo_DE": "Saksa nopeuttaa uusiutuvan energian käyttöönottoa ja tavoittelee 80 % puhdasta sähköä vuoteen 2030 mennessä",
-  "extraInfo_FR": "Ranskan parlamentti hyväksyi suuren maahanmuuttouudistuksen valtakunnallisten mielenosoitusten keskellä",
-  "legend1": "Tietoja ei ole saatavilla",
+  "legend1": "Ei tietoja saatavilla",
   "tooltipExtraInfoLabel": "Klikkaa tästä"
 }
