Update language file: el

--- a/static/languages/el.json
+++ b/static/languages/el.json
@@ -1,13 +1,11 @@
 {
-  "title": "Ποιες χώρες της ΕΕ προσφέρουν τις καλύτερες προοπτικές απασχόλησης;",
-  "subtitle": "Η μελλοντική αύξηση της απασχόλησης σε αυτές τις χώρες το 2022-2035 εκτιμάται σε 5,6%.",
+  "title": "Πόσες γυναίκες δολοφονήθηκαν από κάποιο κοντινό τους πρόσωπο στην Ευρώπη;",
+  "subtitle": "Το 2023, ο μέσος αριθμός γυναικών που δολοφονήθηκαν στην ΕΕ ήταν 0,47 ανά 100.000 άτομα. Αυτές οι δολοφονίες διαπράχθηκαν συνήθως από τον σύντροφό τους ή από μέλος της οικογένειάς τους.",
   "textNoteDescription": "Σημείωμα",
-  "textNote": "sdchdc",
+  "textNote": "Τα δεδομένα για την Κύπρο, την Ιταλία και τη Σουηδία είναι από το 2019, ενώ για τη Φινλανδία και τη Μάλτα είναι από το 2022. Δεν υπάρχουν διαθέσιμα δεδομένα για το Βέλγιο, τη Βουλγαρία, το Λουξεμβούργο, τη Δανία, την Πολωνία ή την Πορτογαλία. Τα δεδομένα συλλέγονται από τις Εθνικές Στατιστικές Υπηρεσίες ή άλλες αρμόδιες αρχές. Οι έντονες διακυμάνσεις μεταξύ των κρατών μελών ενδέχεται να οφείλονται στην έλλειψη τυποποιημένων ορισμών και σε ασυνεπείς μεθόδους συλλογής δεδομένων.",
   "textSourceDescription": "Πηγή",
-  "textSource": "sdcshdc",
+  "textSource": "Eurostat (2023)",
   "linkDataAccessDescription": "Πρόσβαση στα δεδομένα",
-  "extraInfo_DE": "Η Γερμανία επιταχύνει την ανάπτυξη των ανανεώσιμων πηγών ενέργειας, στοχεύει στο 80% καθαρή ενέργεια έως το 2030",
-  "extraInfo_FR": "Το γαλλικό κοινοβούλιο ενέκρινε το νομοσχέδιο για τη σημαντική μεταρρύθμιση της μετανάστευσης εν μέσω πανελλαδικών διαδηλώσεων",
   "legend1": "Δεν υπάρχουν διαθέσιμα δεδομένα",
   "tooltipExtraInfoLabel": "Κάντε κλικ εδώ"
 }
