--- a/static/languages/pt.json
+++ b/static/languages/pt.json
@@ -1,13 +1,11 @@
 {
-  "title": "Quais países da UE oferecem as melhores perspectivas de emprego?",
-  "subtitle": "O crescimento futuro do emprego nesses países entre 2022 e 2035 é estimado em 5,6%.",
+  "title": "Quantas mulheres foram mortas por alguém próximo a elas na Europa?",
+  "subtitle": "Em 2023, a média de mulheres assassinadas na UE foi de 0,47 por 100.000 habitantes. Esses assassinatos geralmente eram cometidos pelo parceiro ou por um membro da família.",
   "textNoteDescription": "Observação",
-  "textNote": "SDCHDC",
+  "textNote": "Os dados para Chipre, Itália e Suécia são de 2019, e para Finlândia e Malta são de 2022. Não há dados disponíveis para Bélgica, Bulgária, Luxemburgo, Dinamarca, Polônia ou Portugal. Os dados são coletados de Institutos Nacionais de Estatística ou outras autoridades competentes. As grandes variações entre os Estados-Membros podem ser atribuídas à falta de definições padronizadas e a métodos inconsistentes de coleta de dados.",
   "textSourceDescription": "Fonte",
-  "textSource": "sdcshdc",
+  "textSource": "Eurostat (2023)",
   "linkDataAccessDescription": "Acesse os dados",
-  "extraInfo_DE": "Alemanha acelera implementação de energia renovável e tem como meta 80% de energia limpa até 2030",
-  "extraInfo_FR": "Parlamento francês aprova importante projeto de lei de reforma da imigração em meio a protestos em todo o país",
-  "legend1": "Não há dados disponíveis",
+  "legend1": "Não há dados disponíveis.",
   "tooltipExtraInfoLabel": "Clique aqui"
 }
