Update language file: sk

--- a/static/languages/sk.json
+++ b/static/languages/sk.json
@@ -1,13 +1,11 @@
 {
-  "title": "Ktoré krajiny EÚ ponúkajú najlepšie vyhliadky na zamestnanie?",
-  "subtitle": "Budúci rast zamestnanosti v týchto krajinách v rokoch 2022-2035 sa odhaduje na 5,6 %.",
+  "title": "Koľko žien bolo v Európe zabitých niekým blízkym?",
+  "subtitle": "V roku 2023 bol priemerný počet zavraždených žien v EÚ 0,47 na 100 000 obyvateľov. Tieto vraždy zvyčajne spáchal ich partner alebo člen rodiny.",
   "textNoteDescription": "Poznámka",
-  "textNote": "sdchdc",
+  "textNote": "Údaje pre Cyprus, Taliansko a Švédsko sú z roku 2019 a pre Fínsko a Maltu sú z roku 2022. Pre Belgicko, Bulharsko, Luxembursko, Dánsko, Poľsko ani Portugalsko nie sú k dispozícii žiadne údaje. Údaje sa zbierajú od národných štatistických úradov alebo iných príslušných orgánov. Výrazné rozdiely medzi členskými štátmi môžu byť spôsobené nedostatkom štandardizovaných definícií a nekonzistentnými metódami zberu údajov.",
   "textSourceDescription": "Zdroj",
-  "textSource": "sdcshdc",
+  "textSource": "Eurostat (2023)",
   "linkDataAccessDescription": "Prístup k údajom",
-  "extraInfo_DE": "Nemecko urýchľuje zavádzanie energie z obnoviteľných zdrojov a do roku 2030 má za cieľ dosiahnuť 80 % čistej energie",
-  "extraInfo_FR": "Francúzsky parlament počas celonárodných protestov schválil návrh zákona o veľkej imigračnej reforme",
   "legend1": "Nie sú k dispozícii žiadne údaje",
   "tooltipExtraInfoLabel": "Kliknite sem"
 }
